--- a/app/src/main/res/layout/item_list_message_person.xml
+++ b/app/src/main/res/layout/item_list_message_person.xml
@@ -41,7 +41,8 @@
                 android:id="@+id/tv_item_message_placeholder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="message ..."/>
+                android:text="message ..."
+                android:layout_marginTop="8dp"/>
         </LinearLayout>
 
         <TextView
@@ -49,6 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:text="09:52" />
+            android:text="09:52"
+            android:layout_centerVertical="true"/>
     </RelativeLayout>
 </com.google.android.material.card.MaterialCardView>
